<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<PreferenceCategory android:title="@string/credential">
		<CheckBoxPreference android:key="@string/pref_auto_login" android:title="@string/auto_login" />
		<EditTextPreference android:title="@string/username" android:key="@string/pref_username" android:dependency="@string/pref_auto_login" />
		<EditTextPreference android:title="@string/password" android:key="@string/pref_password" android:password="true" android:dependency="@string/pref_auto_login" />
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/server">
		<ListPreference
			android:key="@string/pref_server_address"
			android:title="@string/server_address"
			android:entries="@array/entries_server_address"
			android:entryValues="@array/entriesvalues_server_address"
			android:defaultValue="fdconfig"
			/>
		<EditTextPreference
			android:title="@string/new_task_interval"
			android:key="@string/pref_new_task_interval"
			android:defaultValue="5"
			android:dialogMessage="@string/new_task_interval_explain"
			android:numeric="integer"
			/>
		<EditTextPreference
			android:title="@string/new_task_interval_slower"
			android:key="@string/pref_new_task_interval_slower"
			android:defaultValue="10"
			android:dialogMessage="@string/new_task_interval_slower_explain"
			android:numeric="integer"
			/>
	</PreferenceCategory>
</PreferenceScreen>
