<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical"
	android:padding="10dp"
	>
	<EditText
		android:id="@+id/txtUsername"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:hint="@string/username"
		android:inputType="textNoSuggestions"
		>
	</EditText>
	<EditText
		android:id="@+id/txtPassword"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:password="true"
		android:hint="@string/password"
		android:inputType="textNoSuggestions"
		>
	</EditText>
	<CheckBox
		android:id="@+id/chkRemember"
		android:text="@string/remember_me"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:textSize="25dp"
		>
	</CheckBox>
	<Button
		android:id="@+id/btnLogin"
		android:text="@string/login"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:textSize="25dp"
		android:padding="15dp"
		>
	</Button>
</LinearLayout>
