<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	>
	<TextView 
		android:id="@+id/txtTableName" 
		android:text="[Table Name]"
		android:layout_width="match_parent" 
		android:layout_height="wrap_content"
		android:layout_alignParentTop="true" 
		android:layout_marginTop="10dp"
		android:layout_marginBottom="10dp"
		android:textSize="30dp"
		android:gravity="center"
		>
	</TextView>
	<TableLayout 
		android:id="@+id/tlButtons"
		android:layout_width="match_parent"
		android:layout_height="wrap_content" 
		android:layout_alignParentBottom="true" 
		android:gravity="center"
		>
		<TableRow>
			<Button
				android:id="@+id/btnConfirm" 
				android:text="@string/confirm_order"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="1.0"
				>
			</Button>
			<Button 
				android:id="@+id/btnContinue" 
				android:text="@string/continue_adding" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content" 
				android:layout_weight="1.0"
				>
			</Button>
		</TableRow>
	</TableLayout>
	<LinearLayout 
		android:id="@+id/llTotal" 
		android:layout_width="match_parent" 
		android:layout_height="wrap_content"
		android:layout_above="@id/tlButtons"
		android:orientation="horizontal"
		>
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1.0"
			android:text="@string/total_uppercase"
			android:textSize="20dp" 
			android:textStyle="bold"
			>
		</TextView>
		<TextView
			android:id="@+id/totalPaid"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="@string/dummy_number"
			android:textSize="20dp" 
			android:textStyle="bold"
			>
		</TextView>
	</LinearLayout>
    <ListView
		android:id="@+id/lvOrderItems"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_below="@id/txtTableName"
		android:layout_above="@id/llTotal"
		>
	</ListView>
</RelativeLayout>
